--- a/app/templates/classes.html
+++ b/app/templates/classes.html
@@ -4,21 +4,21 @@
     <h1 class="display-4">Classes <a href="{{ url_for('classes.new_class') }}" class="btn btn-sm btn-add"><i class="fa-solid fa-plus"></i></a></h1>
 </div>
 <div class="row row-cols-1 row-cols-md-3">
-    {% for c in gym_classes|sort %}
+    {% for class in gym_classes|sort %}
     <div class="col mb-4">
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">
-                    {{ c.name }}
+                    {{ class.name }}
                 </h4>
-                <p class="card-subtitle mb-2">{{ c.class_type }}</p>
+                <p class="card-subtitle mb-2">{{ class.class_type }}</p>
                 <p class="card-text">
-                    Total Attendance: <strong>{{ c.attendance_list|length }} </strong></br>
-                    Most recent attendance: {{ (c.attendance_list|sort(reverse = True)|first).date_attended }}
+                    Total Attendance: <strong>{{ class.attendance_list|length }} </strong></br>
+                    Most recent attendance: {{ (class.attendance_list|sort(reverse = True)|first).date_attended }}
                 </p>
-                <a href="{{ url_for('classes.edit_class', class_id=c.id) }}" class="btn btn-sm btn-current"><i
+                <a href="{{ url_for('classes.edit_class', class_id=class.id) }}" class="btn btn-sm btn-current"><i
                         class="fa-solid fa-pen-to-square"></i></a>
-                <a href="{{ url_for('classes.show_class', class_id=c.id) }}" class="btn btn-sm btn-current"><i
+                <a href="{{ url_for('classes.show_class', class_id=class.id) }}" class="btn btn-sm btn-current"><i
                         class="fa-solid fa-circle-info"></i></a>
             </div>
         </div>
